# RecetteSNDS

./: .gitignore  README.md  pyproject.toml
tools/data_format_convertor/: requirements.txt
tools/data_format_convertor/src/: data_format_convertor.py
tools/data_format_convertor/tests/: test_DataFormatConvertor.py
tools/src/: data_format_convertor.py
tools/tests/: test_DataFormatConvertor.py
