[tool.poetry]
name = "recettesnds"
version = "0.1.0"
description = ""
authors = ["Pengfei Liu <liu.pengfei@hotmail.fr>"]
license = "Apache V2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pyspark = "3.3.1"
chardet = "^5.1.0"
pyreadstat = "^1.2.6"

[tool.poetry.dev-dependencies]
pytest= "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
